# nimbo

./: .gitattributes  .gitignore  CHANGELOG_NIMBO.md  Cargo.toml  README.en.md  README.md  README.ru.md
.github/: dependabot.yml
.github/workflows/: android.yml  build-linux.yml  ci.yml  release.yml
apps/: README.md
apps/android/: README.md  gradle.properties  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro  signing.properties.example
apps/android/app/src/androidTest/java/com/danila/nimbo/: ExampleInstrumentedTest.kt
apps/android/app/src/androidTest/java/com/danila/nimbo/network/: LinkParserFragmentDescriptionTest.kt
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/danila/nimbo/: BootRestoreReceiver.kt  MainActivity.kt  MainViewModel.kt  NebulaGuardApplication.kt  QuickConnectActivity.kt
apps/android/app/src/main/java/com/danila/nimbo/model/: BuiltinRoutingProfiles.kt  HomeWidget.kt  LogEntry.kt  NetworkPreset.kt  NotificationItem.kt  PingManager.kt  RoutingProfile.kt  Server.kt  ServerSelector.kt  UpdateInfo.kt  VpnPermission.kt
apps/android/app/src/main/java/com/danila/nimbo/network/: LinkParser.kt  PingManager.kt  PingWorkPlanner.kt  RemnawaveApiClient.kt  SubscriptionManager.kt  SubscriptionRefreshPolicy.kt  UpdateManager.kt  UpdateNotificationPolicy.kt  UpdatePolicy.kt  UpdateWorkScheduler.kt  UpdateWorker.kt
apps/android/app/src/main/java/com/danila/nimbo/service/: DeviceStatsQuickSettingsTileService.kt  ProfileStatsQuickSettingsTileService.kt  QuickSettingsStatsProvider.kt  SubscriptionUpdateScheduler.kt  SubscriptionUpdateWorker.kt  TrafficStatsQuickSettingsTileService.kt  (+1 more)
apps/android/app/src/main/res/drawable/: bg_alias_0000.xml  bg_alias_0001.xml  bg_alias_0002.xml  bg_alias_0004.xml  bg_alias_0005.xml  bg_alias_0006.xml  bg_alias_0007.xml  bg_alias_0008.xml  bg_alias_0009.xml  bg_alias_0010.xml  bg_alias_0011.xml  bg_alias_0012.xml  bg_alias_0013.xml  bg_alias_0014.xml  bg_alias_0015.xml  bg_alias_0016.xml  bg_alias_0017.xml  bg_alias_0018.xml  ic_alias_fg_0000.xml  ic_alias_fg_0001.xml  ic_alias_fg_0002.xml  ic_alias_fg_0004.xml  ic_alias_fg_0005.xml  ic_alias_fg_0006.xml  ic_alias_fg_0007.xml  ic_alias_fg_0008.xml  ic_alias_fg_0009.xml  ic_alias_fg_0010.xml  ic_alias_fg_0011.xml  ic_alias_fg_0012.xml  ic_alias_fg_0013.xml  ic_alias_fg_0014.xml  ic_alias_fg_0015.xml  ic_alias_fg_0016.xml  ic_alias_fg_0017.xml  ic_alias_fg_0018.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_foreground_inset.xml  ic_launcher_monochrome_compact_inset.xml  (+24 more)
apps/android/app/src/main/res/mipmap-anydpi/: ic_alias_0000.xml  ic_alias_0001.xml  ic_alias_0002.xml  ic_alias_0004.xml  ic_alias_0005.xml  ic_alias_0006.xml  ic_alias_0007.xml  ic_alias_0008.xml  ic_alias_0009.xml  ic_alias_0010.xml  ic_alias_0011.xml  ic_alias_0012.xml  ic_alias_0013.xml  ic_alias_0014.xml  ic_alias_0015.xml  ic_alias_0016.xml  ic_alias_0017.xml  ic_alias_0018.xml
apps/android/app/src/main/res/mipmap-anydpi-v26/: ic_alias_0000.xml  ic_alias_0001.xml  ic_alias_0002.xml  ic_alias_0004.xml  ic_alias_0005.xml  ic_alias_0006.xml  ic_alias_0007.xml  ic_alias_0008.xml  ic_alias_0009.xml  ic_alias_0010.xml  ic_alias_0011.xml  ic_alias_0012.xml  ic_alias_0013.xml  ic_alias_0014.xml  ic_alias_0015.xml  ic_alias_0016.xml  ic_alias_0017.xml  ic_alias_0018.xml  ic_launcher_nimbo_blue.xml  ic_launcher_round.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/main/res/xml/: network_security_config.xml  shortcuts.xml
apps/android/app/src/test/java/com/danila/nimbo/: BootRestorePolicyTest.kt  ExampleUnitTest.kt  LinkParserTestStandalone.kt
apps/android/gradle/: libs.versions.toml
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/installer/: build-custom-installer.ps1  build-custom-linux-installer.sh  build-linux-release.sh  index.html  package-lock.json  package.json  vite.config.ts
apps/installer/src/: main.tsx  styles.css
apps/installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
apps/installer/src-tauri/capabilities/: default.json
apps/installer/src-tauri/src/: main.rs  payload.rs
apps/service/: Cargo.toml
apps/service/src/: main.rs  platform.rs
apps/service/src/platform/: elevation.rs  kill.rs  pipe.rs
apps/ui/: index.html  package-lock.json  package.json  poster-capture.html  tray-menu.html  vite.config.ts
apps/ui/src/: App.tsx  main.tsx  store.ts  styles.css
apps/ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
apps/ui/src-tauri/capabilities/: default.json  tray-menu.json
apps/ui/src-tauri/icons/: icon.icns
apps/ui/src-tauri/resources/tun/: README.txt
apps/ui/src-tauri/src/: commands.rs  helper.rs  lib.rs  logging.rs  main.rs  state.rs  tray.rs  tray_icons.rs  updater.rs
apps/ui/src-tauri/windows/: build-local-installer.ps1  hooks.nsh  nimbo-installer.nsi
apps/ui/src/components/: BackButton.tsx  CountryFlag.tsx  NotificationCenter.tsx
apps/ui/src/lib/: api.ts  appearance.ts  deepLinks.ts  i18n.ts  notify.ts  ping.ts  subscriptionLogo.ts  subscriptionTheme.ts  visualTheme.ts
apps/ui/src/pages/: Applications.tsx  Connections.tsx  Home.tsx  Notifications.tsx  Routing.tsx  Servers.tsx  ServersOverview.tsx  Settings.tsx  Statistics.tsx  Subscriptions.tsx  TunnelLogs.tsx
apps/ui/src/tray-menu/: TrayMenu.tsx  main.tsx  tray-menu.css
crates/device/: Cargo.toml
crates/device/src/: lib.rs  platform.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/subscription/: Cargo.toml
crates/subscription/src/: fetcher.rs  lib.rs  model.rs  userinfo.rs
crates/subscription/src/parser/: aggregate.rs  hysteria2.rs  mod.rs  shadowsocks.rs  trojan.rs  vless.rs  vmess.rs  xray_json.rs
crates/xray-config/: Cargo.toml
crates/xray-config/src/: config.rs  inbound.rs  lib.rs  outbound.rs  routing.rs  transport.rs
crates/xray-config/tests/: integration.rs
docs/: ARCHITECTURE.md  RELEASE.md  subscription-branding.md
tools/: update-libxray.ps1
(+118 files in other folders)
