[workspace]
resolver = "2"
members = [
    "apps/service",
    "apps/ui/src-tauri",
    "crates/ipc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Case211"]
license = "Proprietary"
repository = "https://github.com/Case211/nimbo-app"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nimbo-ipc = { path = "crates/ipc" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
