[package]
name = "nimbo-svc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Nimbo Windows service (TUN, core management, IPC)"

[[bin]]
name = "nimbo-svc"
path = "src/main.rs"

[dependencies]
nimbo-ipc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
