[package]
name = "nimbo-device"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Stable device identifier (HWID) + OS info"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
