[package]
name = "nimbo-xray-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "xray-core config builder from Server model"

[dependencies]
nimbo-subscription.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
base64.workspace = true
